feat: use dynamic data instead of mockup for room logic
